--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
-		<junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
-		<junit.platform.version>1.0.0-M4</junit.platform.version>
+		<junit.jupiter.version>5.0.0-SNAPSHOT</junit.jupiter.version>
+		<junit.platform.version>1.0.0-SNAPSHOT</junit.platform.version>
 		<maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
 	</properties>
 
